try to fix the blank gap at the bottom page

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+
 .App {
   text-align: center;
   background-color: #f1ede9;
@@ -54,4 +60,3 @@
     transform: rotate(360deg);
   }
 }
-
