--- a/src/styles/Basket.module.css
+++ b/src/styles/Basket.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     flex-flow: row-reverse wrap;
     align-content: flex-start;
+    height: 90vh;
 }
 
 .basketContainer {
