--- a/src/styles/Checkout.module.css
+++ b/src/styles/Checkout.module.css
@@ -1,3 +1,7 @@
+.pageContainer{
+    height: 90vh;
+}
+
 .title{
     font-family: 'Luminari-regular';
     font-weight: 700;
