--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -30,7 +30,7 @@
     flex-flow: row wrap;
     justify-content: space-around;
     padding-right: 5%;
-    margin-top: 3%;
+    margin-top: 25px;
 }
 
 .navItem {
