--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,12 +1,27 @@
+
+.homeContainer{
+    display: flex;
+    flex-flow: column;
+    align-items: stretch;
+    height: 90vh;
+}
+
 .button {
     background-color: #848abc;
-    border: 5px outset #c4c9f1;
-    font-size: 1em;
+    border: 5px outset #bbc1ec;
+    font-size: 1rem;
     margin: 3%;
     height: 50px;
     color: white;
     padding: 1rem;
     margin-bottom: 2rem;
+    border-radius: 8px;
+    transition: all 200ms;
+    text-decoration: none;
+}
+
+.button:hover {
+    background-color: #aaaed3;
 }
 
 .pText{
@@ -14,28 +29,4 @@
     font-size: 1rem;
 }
 
-.submitButton{
-    background-color: #949ac6;
-    border: 5px outset #c4c9f1;
-    font-size: 1em;
-    margin: 3%;
-    height: 50px;
-}
-
-.submitText{
-    margin-top: 1.5%;
-    margin-bottom: 1%;
-}
-
-.submitButton:active{
-    background-color: #848bba;
-    border: 5px inset #c4c9f1 ;
-}
-.currencyAdjustmentInfo{
-    position: relative;
-    left: 30px;
-    bottom: 40px;
-    border: 2px solid #8d92bc;
-    background-color: #e7e9fd;
-    padding: 2%;
-}
+@media (mix-height: )
